# catholic-mass-readings

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __main__.py  analyze_structure.py  debug_railway.py  debug_scraper.py  debug_verse_parsing.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt  test_api.py  test_parser.py  test_production_debug.py  test_recent.py  test_scraper.py  test_section_types.py  usccb.py  usccb_parser_updated.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
catholic_mass_readings/: __init__.py  constants.py  models.py  usccb.py  utils.py
catholic_mass_readings/commands/: common.py  mass.py
commands/: __init__.py  mass.py
data/: mass_propers.jsonl
docs/source/: conf.py  index.rst
docs/source/catholic_mass_readings/: constants.rst  models.rst  usccb.rst
scripts/: bootstrap.sh  check-all.sh  check.sh  console.sh  harvest_antiphons.py  install-all.sh  install-micromamba.sh  lock-all.sh  lock.sh  mypy-precommit.sh  poetry-to-uv.sh  re-add-api.sh  remove-python.sh  setup-python.sh  setup-uv.sh  shellcheck.sh  update-all.sh
