[tool.poetry]
name = "catholic-mass-readings"
version = "0.2.2"
description = "Provides an API for scraping the web page from https://bible.usccb.org/bible/readings/ to get the readings"
authors = ["Robert Colfin <robert.m.colfin@gmail.com>"]
readme = "README.md"
license = "Apache"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["catholic", "daily", "readings", "scripture", "usccb"]


[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.2"
aiofiles = "^24.1.0"
aiohttp = "^3.11.11"
asyncclick = "^8.1.7.2"
html5lib = "^1.1"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.8.3"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-ruff = "^0.4.1"
pytest-mypy = "^0.10.3"
types-aiofiles = "^24.1.0.20240626"
types-beautifulsoup4 = "^4.12.0.20240907"
types-pytz = "^2024.2.0.20241003"
sphinx-material = "^0.0.36"

[tool.pytest.ini_options]
addopts = "--doctest-modules --mypy --ruff --ruff-format"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py310"
namespace-packages = ["docs/source"]


[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "RUF"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
